Ts 44 add test coverage (#1187)
* ts-44: increase method coverage 0.6->0.7

fetch alma key from environment at deploy time instead of at runtime programmatically. saves us some code

refactor sqs client into factory. add test coverage for writing to dlq

* ts-44: fixing ide warnings

* ts-44: use factory method pattern more correct

remove now unused exception

* ts-44: increase test coverage for SchedulerHelper class

increase jacoco class coverage from 0.6->0.7
add hamcrest dependency

* ts-44: add test coverage for Config class

increase jacoco class coverage from 0.7->0.8

* ts-44: add some test coverage for AlmaHelper

* ts-44: separate code to increase testability and test coverage.

Separating code will also make it easier to read and follow SOLID patterns

* ts-44: use factory instead of implementation for AlmaConnection parameter

* ts-44: init sqs client in constructor

* ts-44: make 2 methods in isbnconverter private since they are used within the first public method and we can use only that public method instead.

split test code for readability and better naming

* ts-44: create connection factory to avoid using AlmaConnection directly

lets us create new connections easier if we need to

* ts-44: ide fixes

* ts-44: rename parameters

* ts-44: add test coverage for factories, incase we need to increase factory logic later

* ts-44: rename test class name to correct convention. add some extra coverage to DocumentXmlParser

* ts-44: increase test coverage to DocumentXmlParser

* ts-44: increase test coverage to DocumentXmlParser

* ts-44: remove unused code

* ts-44: newlines

* ts-44: add test coverage for AlmaClient

rename from AlmaHelper.java to AlmaClient.java

* ts-44: use more of mock annotation for cleaner code

* ts-44: tests for statuscode other than 200

* ts-44: completed 100% test coverage for AlmaClient

* ts-44: small improvements in test code

* ts-44: increase jacoco method coverage 0.8->0.9

* ts-44: use mock annotations

* ts-44: use p